Update Azure Cognitive Search Vector Search Code Sample with Azure OpenAI.ipynb

--- a/Azure Cognitive Search Vector Search Code Sample with Azure OpenAI/Azure Cognitive Search Vector Search Code Sample with Azure OpenAI.ipynb
+++ b/Azure Cognitive Search Vector Search Code Sample with Azure OpenAI/Azure Cognitive Search Vector Search Code Sample with Azure OpenAI.ipynb
@@ -40,7 +40,7 @@
     "from azure.core.credentials import AzureKeyCredential\n",
     "from azure.search.documents import SearchClient\n",
     "from azure.search.documents.indexes import SearchIndexClient\n",
-    "from azure.search.documents.models import Vector\n",
+    "from azure.search.documents.models import VectorizedQuery\n",
     "from azure.search.documents.indexes.models import (\n",
     "    SearchIndex,\n",
     "    SearchField,\n",
@@ -49,12 +49,12 @@
     "    SearchableField,\n",
     "    SearchIndex,\n",
     "    SemanticConfiguration,\n",
-    "    PrioritizedFields,\n",
+    "    SemanticPrioritizedFields,\n",
     "    SemanticField,\n",
     "    SearchField,\n",
-    "    SemanticSettings,\n",
+    "    SemanticSearch,\n",
     "    VectorSearch,\n",
-    "    HnswVectorSearchAlgorithmConfiguration,\n",
+    "    HnswAlgorithmConfiguration,\n",
     ")\n",
     "from dotenv import load_dotenv\n",
     "from tenacity import retry, wait_random_exponential, stop_after_attempt"
